--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 editor.sublime-project export-ignore
 syntax-test.html export-ignore
 .editorconfig export-ignore
+syntax-test.v1.html export-ignore
+syntax-test.v1.js export-ignore
+syntax-test.v1.ts export-ignore
